# substrate

./: .dockerignore  .env.example  .env.local.example  .env.prod.example  .gitignore  .npmrc  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  GEMINI.md  LICENSE  Makefile  README.md  compose.yaml  entrypoint.sh  index.html  invariant-realm.json  master-realm.json  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  sonar-project.properties  substrate-realm.json  test-summarizer.sh  theme.md  tsconfig.app.json  vite.config.ts
crates/graph-wasm/: Cargo.toml
crates/graph-wasm/src/: engine.rs  lib.rs
docs/: Dockerfile  README.md  index.md  mkdocs.yml  system-capabilities.md
env/: infra.env.example  llm.env.example  platform.env.example
init/: 01-init-databases.sh
migrations/: V1__ingestion_schema.sql  V2__sync_schedules.sql  V3__job_system.sql  V4__job_schedules_unique_constraint.sql  V5__job_progress_meta.sql
react/: Graph.tsx  index.ts  types.ts  worker.ts
scripts/: check-contracts.sh  check-version-alignment.py  configure.sh  deploy-prod.sh  doctor.sh  import-history.sh  render-realm.py  resolve-version.sh  run-lint.sh  run-tests.sh  set-env.sh
services/gateway/: .env.example  Dockerfile  config.yaml  pyproject.toml
services/gateway/src/: config.py  config_registry.py  config_runtime.py  main.py  proxy.py  sse_endpoint.py  startup.py
services/gateway/src/api/: account.py  config.py  internal_config.py  llm_test.py  llm_tokenize.py  postgres_test.py  profile_idps.py
services/gateway/tests/: conftest.py  test_api_tokens.py  test_auth.py  test_auth_disabled.py  test_avatar.py  test_config_registry.py  test_internal_config.py  test_llm_tokenize.py  test_proxy.py
services/graph/: .env.example  Dockerfile  config.yaml  entrypoint.sh  pyproject.toml
services/graph/migrations/postgres/: V10__embedding_dim_896.sql  V10__user_avatars.sql  V11__chat_context_consolidation.sql  V11__drop_content_chunks.sql  V12__chat_context_entries.sql  V1__initial_schema.sql  V2__user_scoping_and_management.sql  V3__chat_context_resync_total_lines.sql  V3__description_generated_at.sql  V4__drop_duplicate_total_lines.sql  V5__age_file_id_indexes.sql  V5__rename_ask_to_chat.sql  V6__rename_ask_pkey_indexes.sql  V6__sse_events.sql  V7__embedding_dim_1024.sql  V7__rename_remaining_ask_objects.sql  V8__embedding_dim_2560.sql  V8__mvp_finalize.sql  V9__api_tokens.sql  V9__embedding_dim_768.sql
services/graph/src/: config.py  main.py  sse_retention.py  startup.py
services/graph/src/api/: activity.py  ask.py  auth.py  chat.py  chat_context.py  chat_edit.py  chat_settings.py  communities.py  deletion.py  export.py  files.py  graph_search.py  integrations.py  internal_chat_preview.py  internal_config.py  json_fields.py  preferences.py  preferences_helpers.py  routes.py  schedules.py  sessions.py  sources.py  syncs.py  usage.py  users.py
services/graph/src/graph/: ask_pipeline.py  ask_store.py  chat_context_resolver.py  chat_context_store.py  chat_pipeline.py  chat_store.py  community.py  enriched_summary.py  export_writer.py  file_full_content.py  file_reconstruct.py  leiden_config.py  reranker.py  rrf.py  snapshot_query.py  sparse_retrieval.py  store.py
services/graph/tests/: conftest.py  test_activity_api.py  test_ask_api.py  test_ask_pipeline.py  test_chat_api.py  test_chat_context_api.py  test_chat_context_resolver.py  test_chat_entries_api.py  test_chat_pipeline.py  test_chat_pipeline_full_content.py  test_chat_pipeline_selection.py  test_chat_pipeline_streaming.py  test_chat_settings_api.py  test_chat_store_visible.py  test_communities_api.py  test_community_module.py  test_community_sse_emit.py  test_consumer.py  test_export_api.py  test_file_full_content.py  test_file_reconstruct.py  test_files_api.py  test_graph_api_slim.py  test_graph_projection.py  test_graph_search_api.py  test_leiden_background_tasks.py  test_leiden_config.py  test_leiden_e2e.py  test_node_file.py  test_p4_backend.py  test_preferences_api.py  test_resync_api.py  test_routes.py  test_rrf.py  test_schema_leiden_tables.py  test_snapshot_query.py  test_startup_embedding_dim_guard.py  test_statement_timeout.py  test_store.py  test_summary_enriched.py  (+3 more)
services/ingestion/: .vulture_whitelist.py  Dockerfile  config.yaml  entrypoint.sh  pyproject.toml
services/ingestion/scripts/: backfill_stats.py
services/ingestion/src/: chunker.py  config.py  db.py  events.py  graph_writer.py  json_utils.py  llm.py  main.py  scheduler.py  sources_patch.py  startup.py  sync_issues.py  sync_runs.py  sync_schedules.py
services/ingestion/src/api/: internal_config.py
services/ingestion/src/connectors/: github.py
services/ingestion/src/jobs/: finalize_stats.py  per_sync_leiden.py  runner.py  sync.py
services/ingestion/tests/: conftest.py  test_cleanup.py  test_embedding_dim_guard.py  test_ensure_active_sync.py  test_finalize_stats.py  test_github.py  test_github_helpers.py  test_graph_writer_batching.py  test_graph_writer_integration.py  test_main_syncs_conflict.py  test_per_sync_leiden.py  test_retention.py  test_schema.py  test_sources_patch.py  test_sync_issues.py  test_sync_progress.py  test_sync_repo_integration.py  test_sync_runs.py
services/ingestion/tests/fixtures/sync_integration/: main.py
src/: App.tsx  auth.py  chunker.py  config.py  db.py  env.d.ts  graph_writer.py  llm.py  main.py  main.tsx  proxy.py  publisher.py  qdrant.py  router.tsx  scheduler.py  schema.py  search.py  sources_patch.py  startup.py  sync_issues.py  sync_runs.py  sync_schedules.py
tests/: conftest.py  test_cleanup.py  test_consumer.py  test_embedding_dim_guard.py  test_ensure_active_sync.py  test_github.py  test_graph_projection.py  test_graph_writer_batching.py  test_graph_writer_integration.py  test_proxy_websocket.py  test_retention.py  (+10 more)
(+508 files in other folders)
