[workspace]
resolver = "2"
members = [
    "crates/graph-core",
    "crates/graph-layout",
    "crates/graph-render",
    "crates/graph-worker-wasm",
    "crates/graph-main-wasm",
]

[workspace.package]
version = "0.1.4"
edition = "2024"
license = "MIT"
repository = "https://github.com/invariantcontinuum/graph"

[workspace.dependencies]
petgraph = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "0.2"
web-sys = "0.3"
js-sys = "0.3"
log = "0.4"
console_log = "1"
