[project]
name = "substrate-gateway"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.28.0",
    "pyjwt[crypto]>=2.9.0",
    "structlog>=24.4.0",
    "pydantic-settings>=2.6.0",
    "asyncpg>=0.30.0",
    "sse-starlette>=2.1",
    "substrate-common",
]

[tool.uv.sources]
substrate-common = { workspace = true }

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
