[project]
name = "substrate-ingestion"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "asyncpg>=0.30.0",
    "httpx>=0.28.0",
    "structlog>=24.4.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-ulid>=3.0",
    "substrate-common",
    "substrate-graph-builder",
    "graspologic>=3.4.0",
    "scipy>=1.11.0",
]

[tool.uv.sources]
substrate-common = { workspace = true }
substrate-graph-builder = { workspace = true }

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
]

[tool.ruff]
extend-exclude = [".vulture_whitelist.py"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
check_untyped_defs = false
warn_unused_ignores = false

[[tool.mypy.overrides]]
module = ["asyncpg.*", "jwt.*", "cryptography.*", "testcontainers.*", "sse_starlette.*"]
ignore_missing_imports = true
